fix(tests & doc): fix unit tests and swagger documentation
