# Code/Server/docs/swagger.json
@@ -1396,10 +1396,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Document deleted",
-                        "schema": {
-                            "$ref": "#/definitions/models.DocumentResponse"
-                        }
+                        "description": "Document deleted"
                     },
                     "403": {
                         "description": "Property not yours",
@@ -2166,10 +2163,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Deleted room ID",
-                        "schema": {
-                            "$ref": "#/definitions/models.IdResponse"
-                        }
+                        "description": "Deleted room ID"
                     },
                     "403": {
                         "description": "Property not yours",
@@ -2510,10 +2504,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Deleted furniture ID",
-                        "schema": {
-                            "$ref": "#/definitions/models.IdResponse"
-                        }
+                        "description": "Deleted furniture ID"
                     },
                     "403": {
                         "description": "Property not yours",
